# azure-containerapps-dynamic-session-sample

./: .gitignore  AGENTS.md  README.md
.devcontainer/: devcontainer.json
code-interpreter/: AGENTS.md  README.md  main.py  pyproject.toml
dynamic-sessions-mcp/: AGENTS.md  README.md  deploy.json
gpt-code-interpreter/: .env.example  AGENTS.md  README.md  main.py  pyproject.toml
gpt-mcp-interpreter/: .env.example  AGENTS.md  README.md  main.py  pyproject.toml
helloworld/: .env.example  README.md  main.py  pyproject.toml
mcp/: AGENTS.md  README.md
